Changed required java version on 1.8