@@ -52,26 +52,29 @@ public class MainWindow extends JFrame {
                    cell.setEnabled(false);
                    boolean restartGame = false;
                    switch (game.makeMove(finalX, finalY)){
-                       case YOU ->{
+                       case YOU:{
                           displayInformMessage("gameOver", "youWin");
                           score[0]++;
                           restartGame = true;
+                          break;
                        }
-                       case COMPUTER -> {
+                       case COMPUTER:{
                            displayInformMessage("gameOver", "youLose");
                            score[1]++;
                            restartGame = true;
+                           break;
                        }
-                       case DRAW -> {
+                       case DRAW:{
                            displayInformMessage("gameOver", "youHaveDraw");
                            score[0]++;
                            score[1]++;
                            restartGame = true;
+                           break;
                        }
                    }
                    if(restartGame){
                        restartGame();
-                       scoreLabel.setText("%d:%d".formatted(score[0], score[1]));
+                       scoreLabel.setText(String.format("%d:%d", score[0], score[1]));
                    }
                });
                cellsPanel.add(cell);
